<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsActivity"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0841EC"
        android:id="@+id/toolkummuko"
        app:titleTextColor="#ffffff"
        app:title="@string/user_inss"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_heading"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textColor="#009688"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/welcome_text"
                android:layout_marginTop="10sp"
                android:textColor="#E53935"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_line"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginTop="10sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="84dp"
                android:src="@drawable/button_image"
                android:layout_marginTop="10sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/consists_of"
                android:layout_marginTop="10sp"
                android:textColor="#000000"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="133dp"
                android:layout_gravity="center"
                android:layout_marginTop="15sp"
                android:src="@drawable/tabs_image" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tabs_laa"
                android:layout_marginTop="10sp"
                android:textColor="#000000"
                android:layout_marginStart="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/weather_heading"
                android:layout_marginTop="10sp"
                android:textColor="#000000"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/weather_description"
                android:layout_marginTop="10sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/traffic_heading"
                android:layout_marginTop="10sp"
                android:textColor="#000000"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/traffic_desrcription"
                android:layout_marginTop="10sp"
                android:textColor="#000000"/>

            <ImageView
                android:layout_width="106dp"
                android:layout_height="91dp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_satellite_comeon"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sattelite_name"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite_description"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:textColor="#000000"/>
            <ImageView
                android:layout_width="106dp"
                android:layout_height="91dp"
                android:src="@drawable/ic_road"
                android:layout_marginTop="10sp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/road_name"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/road_description"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>


            <ImageView
                android:layout_width="106dp"
                android:layout_height="91dp"
                android:src="@drawable/green_line"
                android:layout_marginTop="10sp"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="106dp"
                android:layout_height="91dp"
                android:src="@drawable/orange_line"
                android:layout_marginTop="10sp"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="106dp"
                android:layout_height="91dp"
                android:src="@drawable/red_line"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/road_subnotationinfo"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginTop="10sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.COVID-19 Info"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_info_des"
                android:textSize="20sp"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_one"
                android:textStyle="italic"
                android:textColor="#000000"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/devoloper_info"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>